--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,13 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/zendaokab/msaeRB
 BugReports: https://github.com/zendaokab/msaeRB/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: 
+    magic,
+    abind,
+    Matrix,
+    MASS,
+    stats
