--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,13 @@ export(est_msaeRB)
 export(est_saeRB)
 export(mse_msaeRB)
 export(mse_saeRB)
+import(abind)
+importFrom(MASS,mvrnorm)
+importFrom(Matrix,forceSymmetric)
+importFrom(magic,adiag)
+importFrom(stats,median)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
+importFrom(stats,pnorm)
+importFrom(stats,rnorm)
