--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+sudo: false
 cache: packages
+warnings_are_errors: true
+
+os:
+- linux
+- osx
+
+r:
+- oldrel
+- release
+- devel
