--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ warnings_are_errors: true
 os:
 - linux
 - osx
+- windows
 
 r:
 - oldrel
 - release
 - devel
+
+after_success:
+  - Rscript -e 'covr::codecov(type = "all")'
