--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.3
 Author: Zenda Oka Briantiko [aut, cre],
     Azka Ubaidillah [aut]
 Maintainer: Zenda Oka Briantiko <221710087@stis.ac.id>
-Description: Implements multivariate ratio benchmarking small area estimation. This package provides ratio benchmarking estimation for univariate and multivariate small area estimation and its MSE. In fact, MSE estimators for ratio benchmark are not readily available, so resampling method that called parametric bootstrap is applied. The ratio benchmark model and parametric bootstrap in this package are based on the model proposed in small area estimation (J.N.K Rao and Isabel Molina, 2015). 
+Description: Implements multivariate ratio benchmarking small area estimation. This package provides ratio benchmarking estimation for univariate and multivariate small area estimation and its MSE. In fact, MSE estimators for ratio benchmark are not readily available, so resampling method that called parametric bootstrap is applied. The ratio benchmark model and parametric bootstrap in this package are based on the model proposed in small area estimation. J.N.K Rao and Isabel Molina (2015, ISBN: 978-1-118-73578-7). 
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
